crates/runtime/tests/search/snapshots/integration_models__search__cayenne-no_vector_engine-dataset-multi_embeddings_megascience_vector_search_sql_filtered_index_only.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(_score, 3) as _score FROM vector_search(qs, 'secondary', answer) WHERE subject != 'math' ORDER BY _score DESC, id LIMIT 4"
---
[
  {
    "id": 890,
    "_score": 0.632
  },
  {
    "id": 1303,
    "_score": 0.606
  },
  {
    "id": 449,
    "_score": 0.58
  },
  {
    "id": 819,
    "_score": 0.576
  }
]
