crates/runtime/tests/search/snapshots/integration_models__search__cayenne-no_vector_engine-dataset-multi_embeddings_megascience_vector_search_sql_vectors.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, array_length(answer_embedding), trunc(score, 3) as score  FROM vector_search(qs, 'second', answer) order by score desc, id desc LIMIT 4;"
snapshot_kind: text
---
[
  {
    "id": 189,
    "answer": "\\[\n2 - 2(-3)^2 = 2 - 2(9) = 2 - 18 = \\boxed{-16}\n\\]",
    "array_length(vector_search(qs, Utf8(\"second\"), answer).answer_embedding)": 256,
    "_score": "0.70"
  },
  {
    "id": 212,
    "answer": "\\[\n(2y)^2 = (2 \\times 2)^2 = 4^2 = \\boxed{16}\n\\]",
    "array_length(vector_search(qs, Utf8(\"second\"), answer).answer_embedding)": 256,
    "_score": "0.69"
  },
  {
    "id": 1277,
    "answer": "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\).",
    "array_length(vector_search(qs, Utf8(\"second\"), answer).answer_embedding)": 256,
    "_score": "0.68"
  },
  {
    "id": 195,
    "answer": "\\[\n2x^2 = 2(-3)^2 = 2(9) = \\boxed{18}\n\\]",
    "array_length(vector_search(qs, Utf8(\"second\"), answer).answer_embedding)": 256,
    "_score": "0.67"
  }
]
